versions/v2.10/modules/en/pages/faq/container-network-interface-providers.adoc
= Container Network Interface (CNI) Providers
:page-languages: [en, zh]
:revdate: 2026-07-15
:page-revdate: {revdate}
:community-path: faq/container-network-interface-providers.adoc 
:product-path: faq/container-network-interface-providers.adoc
:description: Learn about Container Network Interface (CNI), the CNI providers Rancher provides, the features they offer, and how to choose a provider for you
ifeval::["{build-type}" != "community"]
:xref-node-reqs: xref:cluster-deployment/node-requirements.adoc
:xref-rke1-config: xref:cluster-deployment/configuration/rke1.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-node-reqs: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/node-requirements-for-rancher-managed-clusters.adoc
:xref-rke1-config: xref:reference-guides/cluster-configuration/rancher-server-configuration/rke1-cluster-configuration.adoc
endif::[]

== What is CNI?

CNI (Container Network Interface), a https://cncf.io/[Cloud Native Computing Foundation project], consists of a specification and libraries for writing plugins to configure network interfaces in Linux containers, along with a number of  plugins. CNI concerns itself only with network connectivity of containers and removing allocated resources when the container is deleted.

Kubernetes uses CNI as an interface between network providers and Kubernetes pod networking.

image::cni-logo.png[CNI Logo]

For more information visit https://github.com/containernetworking/cni[CNI GitHub project].

== What Network Models are Used in CNI?

CNI network providers implement their network fabric using either an encapsulated network model such as Virtual Extensible Lan (https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#vxlan[VXLAN]) or an unencapsulated network model such as Border Gateway Protocol (https://en.wikipedia.org/wiki/Border_Gateway_Protocol[BGP]).

=== What is an Encapsulated Network?

This network model provides a logical Layer 2 (L2) network encapsulated over the existing Layer 3 (L3) network topology that spans the Kubernetes cluster nodes. With this model you have an isolated L2 network for containers without needing routing distribution, all at the cost of minimal overhead in terms of processing and increased IP package size, which comes from an IP header generated by overlay encapsulation. Encapsulation information is distributed by UDP ports between Kubernetes workers, interchanging network control plane information about how MAC addresses can be reached. Common encapsulation used in this kind of network model is VXLAN, Internet Protocol Security (IPSec), and IP-in-IP.

In simple terms, this network model generates a kind of network bridge extended between Kubernetes workers, where pods are connected.

This network model is used when an extended L2 bridge is preferred. This network model is sensitive to L3 network latencies of the Kubernetes workers. If datacenters are in distinct geolocations, be sure to have low latencies between them to avoid eventual network segmentation.

CNI network providers using this network model include Flannel, Canal, Weave, and Cilium. By default, Calico is not using this model, but it can be configured to do so.

image::encapsulated-network.png[Encapsulated Network]

=== What is an Unencapsulated Network?

This network model provides an L3 network to route packets between containers. This model doesn't generate an isolated l2 network, nor generates overhead. These benefits come at the cost of Kubernetes workers having to manage any route distribution that's needed. Instead of using IP headers for encapsulation, this network model uses a network protocol between Kubernetes workers to distribute routing information to reach pods, such as https://en.wikipedia.org/wiki/Border_Gateway_Protocol[BGP].

In simple terms, this network model generates a kind of network router extended between Kubernetes workers, which provides information about how to reach pods.

This network model is used when a routed L3 network is preferred. This mode dynamically updates routes at the OS level for Kubernetes workers. It's less sensitive to latency.

CNI network providers using this network model include Calico and Cilium. Cilium may be configured with this model although it is not the default mode.

image::unencapsulated-network.png[Unencapsulated Network]

== What CNI Providers are Provided by Rancher?

=== RKE Kubernetes clusters

Out-of-the-box, Rancher provides the following CNI network providers for RKE Kubernetes clusters: Canal, Flannel, Calico, and Weave.

You can choose your CNI network provider when you create new Kubernetes clusters from Rancher.

==== Canal

image::canal-logo.png[Canal Logo]

Canal is a CNI network provider that gives you the best of Flannel and Calico. It allows users to easily deploy Calico and Flannel networking together as a unified networking solution, combining Calico's network policy enforcement with the rich superset of Calico (unencapsulated) and/or Flannel (encapsulated) network connectivity options.

In Rancher, Canal is the default CNI network provider combined with Flannel and VXLAN encapsulation.

Kubernetes workers should open UDP port `8472` (VXLAN) and TCP port `9099` (health checks). If using Wireguard, you should open UDP ports `51820` and `51821`. For more details, refer to {xref-node-reqs}[the port requirements for user clusters].

image::canal-diagram.png[]

For more information, refer to the https://github.com/rancher/rke2-charts/tree/main-source/packages/rke2-canal[Rancher maintained Canal source] and the https://github.com/projectcalico/canal[Canal GitHub Page].

==== Flannel

image::flannel-logo.png[Flannel Logo]

Flannel is a simple and easy way to configure L3 network fabric designed for Kubernetes. Flannel runs a single binary agent named flanneld on each host, which is responsible for allocating a subnet lease to each host out of a larger, preconfigured address space. Flannel uses either the Kubernetes API or etcd directly to store the network configuration, the allocated subnets, and any auxiliary data (such as the host's public IP). Packets are forwarded using one of several backend mechanisms, with the default encapsulation being https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#vxlan[VXLAN].

Encapsulated traffic is unencrypted by default. Flannel provides two solutions for encryption:

* https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#ipsec[IPSec], which makes use of https://www.strongswan.org/[strongSwan] to establish encrypted IPSec tunnels between Kubernetes workers. It is an experimental backend for encryption.
* https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#wireguard[WireGuard], which is a more faster-performing alternative to strongSwan.

Kubernetes workers should open UDP port `8472` (VXLAN). See {xref-node-reqs}#_networking_requirements[the port requirements for user clusters] for more details.

image::flannel-diagram.png[Flannel Diagram]

For more information, see the https://github.com/flannel-io/flannel[Flannel GitHub Page].

==== Weave

include::shared:ROOT:partial$en/deprecation-weave.adoc[]

image::weave-logo.png[Weave Logo]

Weave enables networking and network policy in Kubernetes clusters across the cloud. Additionally, it support encrypting traffic between the peers.

Kubernetes workers should open TCP port `6783` (control port), UDP port `6783` and UDP port `6784` (data ports). See the {xref-node-reqs}#_networking_requirements[port requirements for user clusters] for more details.

For more information, see the following pages:

* https://github.com/weaveworks/weave/blob/master/site/overview.md[Weave Net Official Site]

=== {rke2-product-name} Kubernetes clusters

Out-of-the-box, Rancher provides the following CNI network providers for RKE2 Kubernetes clusters: <<_canal,Canal>> (see above section), Calico, and Cilium.

You can choose your CNI network provider when you create new Kubernetes clusters from Rancher.

==== Calico

image::calico-logo.png[Calico Logo]

Calico enables networking and network policy in Kubernetes clusters across the cloud. By default, Calico uses a pure, unencapsulated IP network fabric and policy engine to provide networking for your Kubernetes workloads. Workloads are able to communicate over both cloud infrastructure and on-prem using BGP.

Calico also provides a stateless IP-in-IP or VXLAN encapsulation mode that can be used, if necessary. Calico also offers policy isolation, allowing you to secure and govern your Kubernetes workloads using advanced ingress and egress policies.

Kubernetes workers should open TCP port `179` if using BGP or UDP port `4789` if using VXLAN encapsulation. In addition, TCP port `5473` is needed when using Typha. See {xref-node-reqs}#_networking_requirements[the port requirements for user clusters] for more details.

[IMPORTANT]
====

In Rancher v2.6.3, Calico probes fail on Windows nodes upon RKE2 installation. *Note that this issue is resolved in v2.6.4.*

* To work around this issue, first navigate to `\https://<rancherserverurl>/v3/settings/windows-rke2-install-script`.
* There, change the current setting: `+https://raw.githubusercontent.com/rancher/wins/v0.1.3/install.ps1+` to this new setting: `+https://raw.githubusercontent.com/rancher/rke2/master/windows/rke2-install.ps1+`.
====


image::calico-diagram.svg[Calico Diagram]

For more information, see the following pages:

* https://www.projectcalico.org/[Project Calico Official Site]
* https://github.com/projectcalico/calico[Project Calico GitHub Page]

==== Cilium

image::cilium-logo.png[Cilium Logo]

Cilium enables networking and network policies (L3, L4, and L7) in Kubernetes. By default, Cilium uses eBPF technologies to route packets inside the node and VXLAN to send packets to other nodes. Unencapsulated techniques can also be configured.

Cilium recommends kernel versions greater than 5.2 to be able to leverage the full potential of eBPF. Kubernetes workers should open TCP port `8472` for VXLAN and TCP port `4240` for health checks. In addition, ICMP 8/0 must be enabled for health checks. For more information, check https://docs.cilium.io/en/latest/operations/system_requirements/#firewall-requirements[Cilium System Requirements].

===== Ingress Routing Across Nodes in Cilium

{blank} +
By default, Cilium does not allow pods to contact pods on other nodes. To work around this, enable the ingress controller to route requests across nodes with a `CiliumNetworkPolicy`.

After selecting the Cilium CNI and enabling Project Network Isolation for your new cluster, configure as follows:

[,shell]
----
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hn-nodes
  namespace: default
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
      - remote-node
----

== CNI Features by Provider

The following table summarizes the different features available for each CNI network provider provided by Rancher.

|===
| Provider | Network Model | Route Distribution | Network Policies | Mesh | External Datastore | Encryption | Ingress/Egress Policies

| Canal
| Encapsulated (VXLAN)
| No
| Yes
| No
| K8s API
| Yes
| Yes

| Flannel
| Encapsulated (VXLAN)
| No
| No
| No
| K8s API
| Yes
| No

| Calico
| Encapsulated (VXLAN,IPIP) OR Unencapsulated
| Yes
| Yes
| Yes
| Etcd and K8s API
| Yes
| Yes

| Weave
| Encapsulated
| Yes
| Yes
| Yes
| No
| Yes
| Yes

| Cilium
| Encapsulated (VXLAN)
| Yes
| Yes
| Yes
| Etcd and K8s API
| Yes
| Yes
|===

* Network Model: Encapsulated or unencapsulated. For more information, see <<_what_network_models_are_used_in_cni,What Network Models are Used in CNI?>>
* Route Distribution: An exterior gateway protocol designed to exchange routing and reachability information on the Internet. BGP can assist with pod-to-pod networking between clusters. This feature is a must on unencapsulated CNI network providers, and it is typically done by BGP. If you plan to build clusters split across network segments, route distribution is a feature that's nice-to-have.
* Network Policies: Kubernetes offers functionality to enforce rules about which services can communicate with each other using network policies. This feature is stable as of Kubernetes v1.7 and is ready to use with certain networking plugins.
* Mesh: This feature allows service-to-service networking communication between distinct Kubernetes clusters.
* External Datastore: CNI network providers with this feature need an external datastore for its data.
* Encryption: This feature allows cyphered and secure network control and data planes.
* Ingress/Egress Policies: This feature allows you to manage routing control for both Kubernetes and non-Kubernetes communications.

== CNI Community Popularity

include::shared:ROOT:partial$en/cni-popularity.adoc[]

== Which CNI Provider Should I Use?

It depends on your project needs. There are many different providers, which each have various features and options. There isn't one provider that meets everyone's needs.

Canal is the default CNI network provider. We recommend it for most use cases. It provides encapsulated networking for containers with Flannel, while adding Calico network policies that can provide project/namespace isolation in terms of networking.

== How can I configure a CNI network provider?

Please see {xref-rke1-config}[Cluster Options] on how to configure a network provider for your cluster. For more advanced configuration options, please see how to configure your cluster using a {xref-rke1-config}#_rke_cluster_config_file_reference[Config File] and the options for https://rancher.com/docs/rke/latest/en/config-options/add-ons/network-plugins/[Network Plug-ins].
